--- a/config.json
+++ b/config.json
@@ -46,7 +46,7 @@
 	}
 },
 
-"ts": {
+"tsL": {
 	"host": "localhost",
 	"port": 6801,
 	"credentials": {
@@ -137,6 +137,45 @@
 		"r": "right",
 		"*": "wide"
 	}
+},
+
+
+"ts": {
+	"host": "localhost",
+	"port": 10011,
+	"credentials": {
+		"client_login_name": "serveradmin",
+		"client_login_password": "ecEv7C3z"
+	},
+	"acl": [
+		{ "siteGroup": "Лидеры", "sgid": "17" },
+		{ "siteGroup": "Офицеры", "sgid": "21" },
+		{ "siteGroup": "Рыцари", "sgid": "23" },
+		{ "siteGroup": "wqel", "sgid": "9832" }
+	],
+	"transparentSgids": [ "2", "8" ],
+	"ignoredSgids": [ "2" ],
+	"viewer": {
+		"eventName": "mega:teamspeak.events",
+		"channels": {
+			"black": [ 23, 43, 120, 125 ]
+		}
+	},
+	"stats": {
+		"cycleStep": 0.25,
+		"forceReload": 2,
+		"workModelsStep": 1,
+		"getChansStep": 60,
+		"maxIdleBeforeAltab": 540,
+		"maxIdleBeforeAFK": 1080
+	},
+	"spacers": {
+		"l": "left",
+		"c": "center",
+		"r": "right",
+		"*": "wide"
+	}
 }
+
 
 }
