--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "nodebb-plugin-mega-teamspeak",
 	"version": "1.2.8",
+	"nbbpm": {
+		"compatibility": "^0.7.1 || ^0.8.0"
+	},
 	"description": "Mega Teamspeak 3 tools for NodeBB",
 	"main": "library.js",
 	"readme": "ERROR: No README data found!",
