--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodebb-plugin-mega-teamspeak",
   "version": "1.4.0",
   "nbbpm": {
-    "compatibility": "^0.7.1 || ^0.8.0 || ^0.9.0"
+    "compatibility": "^1.0.0"
   },
   "description": "Mega Teamspeak 3 tools for NodeBB",
   "main": "library.js",
